# dtc_bevy_port

./: Cargo.toml  LICENSE  todo.md
assets/: enemy_fly.aseprite  enemy_swim.aseprite  enemy_walk.aseprite  player.aseprite  ui.cob
src/: enemy.rs  game.rs  main.rs  player.rs  resolution.rs  ui.rs
