[package]
name = "dtc_bevy_port"
version = "0.1.0"
edition = "2021"

[dependencies]
avian2d = "0.3.0"
bevy = { version = "0.16", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.31.0"
bevy_aseprite_ultra = "0.6"
rand = "0.9.1"

bevy_cobweb = "0.17.0"
bevy_cobweb_ui = { version = "0.14.4", features = ["hot_reload"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3


[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]

log = { version = "*", features = [
  "max_level_debug",
  "release_max_level_warn",
] }
